# gst-audit

./: .gitignore  .pre-commit-config.yaml  CALLBACK_IMPLEMENTATION.md  README.md  TODO.md  decorators.py  gstaudit.js  gstaudit.py  pyproject.toml  router.py
examples/: log.js  (+3 more)
girest/: README-client-generator.md  README-girest-ts.md  README.md  RECORD_VS_STRUCT_HANDLING.md  girest-client-generator.py  girest-dump-schema.py  girest-frida.py  girest-ts.py  girest.js  main.py  pyproject.toml
girest/design/: CALLBACK_IMPLEMENTATION.md  GENERIC_CONSTRUCTORS.md  IMPLEMENTATION_SUMMARY.md  README-client-generator.md
girest/docs/: URI_TEMPLATE_PARSING.md
girest/examples/: generic_constructor_example.py  log.js  log.ts  version.js
girest/girest/: __init__.py  app.py  callbacks.py  decorators.py  dev.py  generator.py  main.py  resolvers.py  ts_generator.py  ts_generator_jinja.py  uri_parser.py  utils.py  validators.py
girest/girest/templates/: GLibList.ts.j2  GObjectObject.ts.j2  GObjectObjectref_sink.ts.j2  GstIterator.ts.j2  alias.ts.j2  base.ts.j2  callback.ts.j2  class.ts.j2  enum.ts.j2  finalization.ts.j2  flags.ts.j2  interface.ts.j2  main.ts.j2  method.ts.j2  method_GLibList_get_next.ts.j2  method_GLibList_get_prev.ts.j2  method_GLibList_new.ts.j2  method_GLibList_put_next.ts.j2  method_GLibList_put_prev.ts.j2  method_GLibSList_get_next.ts.j2  method_GLibSList_get_prev.ts.j2  method_GLibSList_new.ts.j2  method_GLibSList_put_next.ts.j2  method_GLibSList_put_prev.ts.j2  method_GObjectObjectClass_list_properties.ts.j2  method_GObjectObject_ref.ts.j2  method_GObjectObject_ref_sink.ts.j2  method_GObjectParamSpec_ref.ts.j2  method_GstMiniObject_ref.ts.j2  method_post.ts.j2  method_put.ts.j2  namespace.ts.j2  namespace_index.ts.j2  object.ts.j2  object_GObjectObject.ts.j2  param.ts.j2  param_postcondition.ts.j2  param_precondition.ts.j2  return.ts.j2  return_GLibList.ts.j2  (+17 more)
girest/tests/: README.md  conftest.py  test_generator.py  test_generator_inheritance.py  test_generic_constructors.py  test_generic_demo.py  test_gst_e2e.py  test_record_vs_struct_params.py  test_resolver_generic.py  test_schema.py  test_struct_methods.py  test_typescript_serialization.py  test_uri_parser.py  test_url_objects.py
girest/tests/e2e/: conftest.py  test_e2e_basic.py  (+3 more)
gstaudit-server/: README.md  pyproject.toml
gstaudit-server/gstaudit-server/: app.py
gstaudit-server/gstaudit_server/: app.py  script.js
(+1089 files in other folders)
