[tool.poetry]
name = "girestt"
version = "0.0.1"
description = "GObject introspection to REST API generator"
authors = ["Fluendo S.A. <support@fluendo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
connexion = { version = "^3.3.0", extras = ["flask", "swagger-ui","uvicorn"]}
frida = "*"
pygobject = "<3.50.0"
apispec = "^6.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
