[tool.poetry]
name = "gstaudit-server"
version = "0.0.1"
description = "GStreamer auditing sever"
authors = ["Fluendo S.A. <support@fluendo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
connexion = { version = "^3.3.0", extras = ["flask", "swagger-ui","uvicorn"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
